create loging layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,18 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="backgound_logging">#DCD6D6</color>
+    <!-- loging colors -->
+
+    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorAccent">#D81B60</color>
+
+
+    <color name="_bg__loging_ek2_color">#DBD5D5</color>
+    <color name="rectangle_1_color">#FFFFFF</color>
+    <color name="enter_username_color">#000000</color>
+    <color name="rectangle_2_ek1_color">#E74141</color>
+    <color name="hello__color">#222121</color>
+    <color name="btn_google_color">#D9D9D9</color>
 </resources>
