creting ui untill bottom sheet

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,6 @@
     <color name="rectangle_2_ek1_color">#E74141</color>
     <color name="hello__color">#222121</color>
     <color name="btn_google_color">#D9D9D9</color>
+    <color name="color_toolbar">#1C1919</color>
+    <color name="background_page">#DCD6D6</color>
 </resources>
