--- a/app/src/main/res/layout/create_task_botton_sheet.xml
+++ b/app/src/main/res/layout/create_task_botton_sheet.xml
@@ -16,6 +16,7 @@
         android:hint="Task Name"
         android:minHeight="48dp"
         android:imeOptions="actionNext"
+        android:inputType="text"
         />
 
     <EditText
@@ -28,7 +29,8 @@
         android:hint="Task description"
         android:textSize="16sp"
         android:minHeight="48dp"
-        android:imeOptions="actionDone"/>
+        android:imeOptions="actionDone"
+        android:inputType="textMultiLine"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
