--- a/app/src/main/res/layout/add_label_page.xml
+++ b/app/src/main/res/layout/add_label_page.xml
@@ -3,6 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/color_toolbar"
+        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layout_input_projectname"
@@ -18,7 +26,7 @@
         app:layout_constraintCircleRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_project_name"
