--- a/app/src/main/res/layout/add_project_page.xml
+++ b/app/src/main/res/layout/add_project_page.xml
@@ -3,6 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/color_toolbar"
+        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layout_input_projectname"
@@ -18,7 +26,7 @@
         app:layout_constraintCircleRadius="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_project_name"
@@ -69,48 +77,6 @@
             android:layout_gravity="end"
             android:layout_marginEnd="16dp"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
-    <ImageView
-        android:id="@+id/iv_view_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/layout_favorite"
-        app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/ic_view"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"/>
-    <TextView
-        android:id="@+id/txt_view_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View Type"
-        android:textColor="@color/design_default_color_on_secondary"
-        android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@id/iv_view_type"
-        app:layout_constraintTop_toBottomOf="@id/layout_favorite"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp"/>
-    <RadioGroup
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/txt_view_type"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt_view_type"
-        android:orientation="horizontal">
-        <RadioButton
-            android:id="@+id/list_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableTop="@drawable/ic_list_view"
-            android:layout_margin="16dp"/>
-        <RadioButton
-            android:id="@+id/grid_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:drawableTop="@drawable/grid_svgrepo_com__1_"
-            android:layout_margin="16dp"/>
-    </RadioGroup>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
