--- a/app/src/main/res/layout/create_task_botton_sheet.xml
+++ b/app/src/main/res/layout/create_task_botton_sheet.xml
@@ -16,8 +16,7 @@
         android:hint="Task Name"
         android:minHeight="48dp"
         android:imeOptions="actionNext"
-        android:inputType="text"
-        />
+        android:inputType="text"/>
 
     <EditText
         android:id="@+id/et_task_description"
