--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources >
     <!-- Base application theme. -->
-    <style name="Theme.ToDo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ToDo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -17,6 +17,16 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:statusBarColor">@color/color_toolbar</item>
+    </style>
+    <style name="Widget.MaterialComponents.CollapsingToolbar.MyCollapsingToolbar">
+        <item name="android:background">@color/color_toolbar</item>
+        <item name="collapsedTitleTextColor">@color/white</item>
+        <item name="expandedTitleTextColor">@color/white</item>
+
+    </style>
+    <style name="Theme.AppCompat.DayNight.DarkActionBar.MyActionBar">
+        <item name="android:background">@color/color_toolbar</item>
+
     </style>
 
 
