--- a/app/src/main/res/layout/create_task_botton_sheet.xml
+++ b/app/src/main/res/layout/create_task_botton_sheet.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:layout_behavior="@string/bottom_sheet_behavior">
 
     <EditText
         android:id="@+id/et_task_name"
