chanche task model

--- a/app/src/main/res/layout/inbox_page.xml
+++ b/app/src/main/res/layout/inbox_page.xml
@@ -60,12 +60,16 @@
     android:id="@+id/swipe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="4dp"
     app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        tools:listitem="@layout/recycler_item"
+        tools:listitem="@layout/recycler_project_item"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="3"
         android:layout_marginBottom="40dp"
         app:layout_insetEdge="top"
        />
