--- a/app/src/main/res/layout/create_task_botton_sheet.xml
+++ b/app/src/main/res/layout/create_task_botton_sheet.xml
@@ -103,7 +103,12 @@
             tools:layout_editor_absoluteY="0dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
 
 </LinearLayout>
