--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -52,13 +52,13 @@
         <argument
             android:name="projectId"
             app:argType="string"
-            android:defaultValue="null"
+            android:defaultValue= "@null"
             app:nullable="true" />
         <argument
             android:name="label"
             app:argType="string"
             app:nullable="true"
-            android:defaultValue="null"/>
+            android:defaultValue="@null"/>
     </fragment>
 
 </navigation>
