--- a/app/src/main/res/layout/add_project_page.xml
+++ b/app/src/main/res/layout/add_project_page.xml
@@ -77,6 +77,36 @@
             android:layout_gravity="end"
             android:layout_marginEnd="16dp"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"/>
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_connection_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layout_favorite"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:lottie_rawRes="@raw/connection_error"
+        app:lottie_loop="true"
+        app:lottie_autoPlay="true"
+        android:visibility="gone"/>
+    <TextView
+        android:id="@+id/tv_messange_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Network error"
+        app:layout_constraintTop_toBottomOf="@id/animation_connection_error"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
