--- a/app/src/main/res/layout/create_task_botton_sheet.xml
+++ b/app/src/main/res/layout/create_task_botton_sheet.xml
@@ -103,11 +103,21 @@
             tools:layout_editor_absoluteY="0dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_loading"
+       app:lottie_rawRes="@raw/loading"
+        app:lottie_loop="true"
+        android:layout_width="wrap_content"
+        android:layout_height="56dp"
+        app:lottie_autoPlay="true"
+        android:visibility="gone"
+        />
+    <TextView
+        android:id="@+id/tv_messange_error"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Can´t connect to server, try again"
+        android:layout_gravity="center"
         android:visibility="gone"/>
 
 
