--- a/app/src/main/res/layout/inbox_page.xml
+++ b/app/src/main/res/layout/inbox_page.xml
@@ -26,31 +26,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin">
-
-                <androidx.appcompat.widget.SearchView
-                    android:id="@+id/search"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:queryHint="task name"/>
-
             </com.google.android.material.appbar.MaterialToolbar>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
-    
 
-
-
-
-    <ImageView
-        android:id="@+id/iv_network_error"
-        android:src="@drawable/baseline_wifi_off_24"
-        android:visibility="invisible"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-        />
 
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     android:id="@+id/swipe"
@@ -70,6 +51,14 @@
         app:layout_insetEdge="top"
        />
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_no_internet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:lottie_rawRes="@raw/no_mobile_internet"
+        android:layout_gravity="center"
+        android:visibility="gone"/>
+
 
 
 
