--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
-    android:layout_height="72dp"
+    android:layout_height="80dp"
     app:cardCornerRadius="15dp"
     android:layout_marginStart="24dp"
     android:layout_marginEnd="24dp"
@@ -18,46 +18,81 @@
 
 
         <ImageView
-            android:id="@+id/dot_task_color"
+            android:id="@+id/ic_clock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/baseline_blur_circular_24" />
+            app:srcCompat="@drawable/ic_clock_24" />
+
         <TextView
             android:id="@+id/txt_description"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:textColor="@color/design_default_color_on_secondary"
-            tools:text="Tomar tiempo para descansar"
-            app:layout_constraintBottom_toBottomOf="@+id/dot_task_color"
-            app:layout_constraintTop_toTopOf="@id/dot_task_color"
-            app:layout_constraintStart_toEndOf="@id/dot_task_color"
             android:layout_marginStart="16dp"
-            />
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:layout_marginEnd="4dp"
+            android:textColor="@color/design_default_color_on_secondary"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@+id/ic_clock"
+            app:layout_constraintEnd_toStartOf="@+id/iv_edit"
+            app:layout_constraintStart_toEndOf="@id/ic_clock"
+            app:layout_constraintTop_toTopOf="@id/ic_clock"
+            tools:text="Tomar tiempo para descansar" />
 
         <TextView
             android:id="@+id/txt_task_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             tools:text="Make time for Relax"
-            android:textSize="14sp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textSize="16sp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="4dp"
             android:textColor="@color/design_default_color_on_secondary"
+            app:layout_constraintEnd_toStartOf="@id/iv_edit"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="@id/txt_description"/>
-
-        <ImageButton
-            android:id="@+id/ib_item_more_options"
+        <TextView
+            android:id="@+id/tv_labels"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            app:layout_constraintTop_toBottomOf="@id/txt_description"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_date"
+            android:gravity="end"
+            android:layout_margin="8dp"
+            tools:text="Social/Food/Family "
+            android:textSize="11sp"
+            android:textColor="@color/blue"
+            android:layout_marginTop="8dp"
+            android:ellipsize="end"
+            android:maxLines="1"/>
+        <TextView
+            android:id="@+id/tv_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="2022-06-02"
+            android:layout_margin="8dp"
+            android:textSize="11sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tv_labels"
+            app:layout_constraintTop_toBottomOf="@id/txt_description"/>
+
+
+        <ImageButton
+            android:id="@+id/iv_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
+            android:layout_marginTop="4dp"
             android:background="@android:color/transparent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_more_horizontal" />
+            app:srcCompat="@drawable/baseline_edit_24" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
