--- a/app/src/main/res/layout/settings_page.xml
+++ b/app/src/main/res/layout/settings_page.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:background="@color/color_toolbar"
         android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"/>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_sing_out"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Sing Out"
+        android:background="@color/red"
+        android:textColor="@color/white"
+        android:layout_marginTop="32dp"
+        android:layout_margin="8dp"
+        android:drawableRight="@drawable/baseline_exit_to_app_24"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
